# stable-diffusion.cpp

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  .gitmodules  AGENTS.md  BUILD_NOTES.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.cuda  Dockerfile.cuda-spark  Dockerfile.musa  Dockerfile.sycl  Dockerfile.vulkan  LORA_DUAL_CHAR.md  README.md  TEST_MATRIX.md  build_msvc.bat  cache_dit.hpp  clip.hpp  common.hpp  conditioner.hpp  control.hpp  denoiser.hpp  diffusion_model.hpp  docker-compose.yml  easycache.hpp  esrgan.hpp  face_detect.py  flake.nix  flux.hpp  format-code.ps1  format-code.sh  ggml-patch.diff  ggml.patch  ggml_extend.hpp  gguf_reader.hpp  (+59 more)
.github/: pull_request_template.md
cmake/: build-info.cmake  common.cmake  fetch_prebuilt_ggml.cmake  sd-config.cmake.in  sd.pc.in  stable-diffusion-config.cmake.in  stable-diffusion.pc.in
common/: CMakeLists.txt  common.cpp  common.h
docker/: Dockerfile.cuda  Dockerfile.vulkan
docs/: Hybrid-SD-taesd.md  Hybrid-taesd.md  adetailer.md  anima.md  animatediff.md  backend.md  boogu_image.md  build.md  c_api_reference.md  caching.md  chroma.md  chroma_radiance.md  cli_reference.md  distilled_sd.md  docker.md  edit.md  ernie_image.md  esrgan.md  flux.md  flux2.md  hidream_o1_image.md  hipBLAS_on_Windows.md  hunyuan_video.md  ideogram4.md  imatrix.md  ip_adapter.md  kontext.md  krea2.md  lcm.md  lens.md  lingbot_video.md  longcat_image.md  lora.md  ltx2.md  ltxv.md  mage_flow.md  minit2i.md  model_config.md  ovis_image.md  performance.md  (+20 more)
embed/: embed_fix.py  mistral_merges.txt  mistral_vocab.json  t5_tokenizer.json
examples/: CMakeLists.txt  main.cpp
examples/cli/: CMakeLists.txt  README.md  SDMode.hpp  SDParams.hpp  avi_writer.h  image_metadata.cpp  image_metadata.h  main.cpp
examples/cli/gui/: glove.h  main_glove.h
examples/common/: common.cpp  common.h  common.hpp  log.cpp  log.h  media_io.cpp  media_io.h  resource_owners.hpp
examples/convert/: CMakeLists.txt  README.md  convert.cpp
examples/gemma_test/: CMakeLists.txt  gemma3_test.cpp
examples/imatrix/: CMakeLists.txt  imatrix.cpp
examples/server/: CMakeLists.txt  README.md  api.md  async_jobs.cpp  async_jobs.h  b64.cpp  client.py  demo_txt2img.html  deps.sh  frontend.cpp  index.html.hpp  main.cpp  main.js.hpp  openapi.yaml  preact.js.hpp  routes.h  routes_docs.cpp  routes_index.cpp  routes_openai.cpp  routes_sdapi.cpp  routes_sdcpp.cpp  runtime.cpp  runtime.h  server.cpp  server_doc.yaml  styles.css.hpp  test_client.py
examples/server/public/: index.html  main.js  styles.css
examples/stream_img2img/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  ace.hpp  ace_vae.hpp  anima.hpp  auto_encoder_kl.hpp  backend_fit.cpp  backend_fit.h  backend_fit.hpp  cache_dit.hpp  chunk_graph.hpp  clip.hpp  common.hpp  common_block.hpp  common_dit.hpp  condition_cache_utils.hpp  conditioner.hpp  control.hpp  convert.cpp  denoiser.hpp  detailer.cpp  detailer.h  diffusion_model.hpp  easycache.hpp  ernie_image.hpp  esrgan.hpp  flux.hpp  gemma3.hpp  ggml_extend.hpp  ggml_extend_backend.cpp  ggml_extend_backend.h  ggml_extend_backend.hpp  ggml_graph_cut.cpp  ggml_graph_cut.h  gguf_reader.hpp  guidance.cpp  guidance.h  hidream_o1.hpp  ideogram4.hpp  latent-preview.h  layer_registry.cpp  (+59 more)
src/conditioning/: conditioner.hpp
src/core/: ggml_extend.hpp  ggml_extend_backend.cpp  ggml_extend_backend.h  ggml_graph_cut.cpp  ggml_graph_cut.h  layer_registry.cpp  layer_registry.h  layer_split_partition.cpp  layer_split_partition.h  ordered_map.hpp  rng.hpp  rng_mt19937.hpp  rng_philox.hpp  spectral_ops.hpp  tensor.hpp  tensor_ggml.hpp  util.cpp  util.h
src/extensions/: generation_extension.h  photomaker_extension.cpp  pulid_extension.cpp
src/model/adapter/: ip_adapter.hpp  lora.hpp  pmid.hpp  pulid.hpp
src/model/common/: block.hpp  rope.hpp
src/model/detector/: yolov8.h
src/model/diffusion/: anima.hpp  animatediff.hpp  boogu.hpp  control.hpp  dit.hpp  ernie_image.hpp  flux.hpp  hidream_o1.hpp  hunyuan.hpp  ideogram4.hpp  krea2.hpp  lens.hpp  lingbot_video.hpp  ltxv.hpp  mage_flow.hpp  minit2i.hpp  mmdit.hpp  model.hpp  pid.hpp  qwen_image.hpp  sefi_image.hpp  unet.hpp  wan.hpp  z_image.hpp
src/model/te/: clip.hpp  llm.hpp  t5.hpp
src/model/upscaler/: esrgan.hpp  ltx_latent_upscaler.hpp
src/model/vae/: auto_encoder_kl.hpp  hunyuan_vae.hpp  ltx_audio_vae.hpp  ltx_vae.hpp  mage_vae.hpp  tae.hpp  vae.hpp  wan_vae.hpp
src/model_io/: binary_io.h  ckpt_io.cpp  ckpt_io.h  gguf_io.cpp  gguf_io.h  gguf_reader_ext.h  pickle_io.cpp  pickle_io.h  safetensors_io.cpp  safetensors_io.h  streaming_writer.h  tensor_storage.h  torch_legacy_io.cpp  torch_legacy_io.h  torch_zip_io.cpp  torch_zip_io.h
src/runtime/: auto_quant.cpp  auto_quant.h  cache_dit.hpp  condition_cache_utils.hpp  denoiser.hpp  easycache.hpp  gits_noise.h  guidance.cpp  guidance.h  imatrix.cpp  imatrix.h  imatrix.hpp  latent-preview.h  preprocessing.hpp  sample-cache.cpp  sample-cache.h  spectrum.hpp  speed_sampler.hpp  ucache.hpp
src/tokenizers/: bpe_tokenizer.cpp  bpe_tokenizer.h  clip_tokenizer.cpp  clip_tokenizer.h  gemma3_tokenizer.cpp  gemma3_tokenizer.h  gemma_tokenizer.cpp  gemma_tokenizer.h  gpt_oss_tokenizer.cpp  gpt_oss_tokenizer.h  mistral_tokenizer.cpp  mistral_tokenizer.h  qwen2_tokenizer.cpp  qwen2_tokenizer.h  t5_unigram_tokenizer.cpp  t5_unigram_tokenizer.h  tokenize_util.cpp  tokenize_util.h  tokenizer.cpp  tokenizer.h
src/tokenizers/vocab/: clip_merges.hpp  vocab.cpp  vocab.h
src/vocab/: vocab.cpp  vocab.h
tests/ltx_parity/: CMakeLists.txt  README.md  dump_av_block.py  dump_av_model.py  dump_connector.py  dump_gemma.py  dump_reference.py  dump_s2d.py  dump_vae.py  test_attn_chain_parity.cpp  test_av_block_parity.cpp  test_av_block_smoke.cpp  test_av_model_parity.cpp  test_connector_parity.cpp  test_cont_parity.cpp  test_gemma_cpu_vs_cuda.cpp  test_gemma_parity.cpp  test_gemma_tokenizer.cpp  test_ltx2_vae_roundtrip.cpp  test_ltx_parity.cpp  test_mm_f32_parity.cpp  test_s2d_primitives.cpp  test_softmax_parity.cpp  test_vae_parity.cpp
(+76 files in other folders)
